--- a/duet.cabal
+++ b/duet.cabal
@@ -16,7 +16,13 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   ghc-options:         -Wall
-  exposed-modules:     Duet
+  exposed-modules:     Duet.Instruction
+                     , Duet.Interpreter
+                     , Duet.Main
+                     , Duet.Reference
+                     , Duet.RegisterId
+                     , Duet.Registers
+                     , Duet.Value
   other-modules:       Duet.Prelude
   build-depends:       base  >= 4.7 && < 5
                      , focus-prelude
