Initial (broken) implementation.

--- a/duet.cabal
+++ b/duet.cabal
@@ -25,27 +25,33 @@ library
                      , Duet.Value
   other-modules:       Duet.Prelude
   build-depends:       base  >= 4.7 && < 5
+                     , containers >= 0.5.7.1
                      , focus-prelude
+                     , text >= 1.2.2.2
   default-language:    Haskell2010
 
-executable duet-exe
+executable duet
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , focus-prelude
+                     , containers >= 0.5.7.1
                      , duet
+                     , focus-prelude
+                     , text >= 1.2.2.2
   default-language:    Haskell2010
 
 test-suite duet-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  build-depends:       base
+  build-depends:       QuickCheck
+                     , base
+                     , containers >= 0.5.7.1
+                     , duet
                      , focus-prelude
                      , hspec
-                     , duet
-                     , QuickCheck
+                     , text >= 1.2.2.2
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
